# fiscalbot

./: .env.prod  .gitignore  CONTROLE DE CONTRATOS E ATAS.xlsx  Dockerfile  Makefile  Prompt para desenvolvimento.docx  README.md  alembic.ini  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  fiscalbot-codex-prompts (1).md  iniciar-fiscalbot.bat  parar-fiscalbot.bat  pyproject.toml  railway.json  requirements.txt  ~$ompt para desenvolvimento.docx
app/: __init__.py  main.py
app/api/: deps.py
app/core/: celery_app.py  config.py  security.py  storage.py
app/db/: base.py
app/models/: __init__.py  alerta.py  anexo.py  contract.py  contrato.py  fornecedor.py  indicador.py  log_auditoria.py  notification.py  ocorrencia.py  secretaria.py  user.py
app/repositories/: contrato_repository.py  user_repository.py
app/schemas/: alerta.py  anexo.py  contract.py  contrato.py  fornecedor.py  log.py  ocorrencia.py  secretaria.py  user.py
app/services/: alerta_service.py  (+10 more)
docs/: MANUAL_USUARIO.md  SPRINT_1_ARQUITETURA_BACKEND.md  crud_contratos.md  deploy_vercel.md  importacao_contratos.md  refatoracao_inicial.md
examples/: contratos_importacao.csv
fiscalbot-web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
migrations/: README
scripts/: seed.py  seed_demo_data.py
tests/: conftest.py  test_alertas.py  test_app.py  test_auditoria.py  test_auth.py  test_contract_alerts.py  test_contract_exports.py  test_contract_import.py  test_contratos.py  test_documentos.py  test_fiscalizacao.py
(+52 files in other folders)
