[project]
name = "fiscalbot"
version = "0.1.0"
description = "FiscalBot backend for public contract management and oversight."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "bcrypt>=4.2.0",
    "psycopg[binary]>=3.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "aiofiles>=24.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "xlrd>=2.0.1",
    "reportlab>=4.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/web/dashboard.py" = ["E501"]
